--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "require": {
         "firebase/php-jwt": "^6.11",
         "phpmailer/phpmailer": "^6.9",
-        "vlucas/phpdotenv": "^5.6"
+        "vlucas/phpdotenv": "^5.6",
+        "paypal/rest-api-sdk-php": "^1.14"
     }
 }
